--- a/hospital/pom.xml
+++ b/hospital/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
-		<java-version>1.6</java-version>
+		<java-version>1.8</java-version>
 		<org.springframework-version>4.0.3.RELEASE</org.springframework-version>
 		<spring-security-version>4.0.3.RELEASE</spring-security-version>
 		<org.aspectj-version>1.7.4</org.aspectj-version>
@@ -155,11 +155,29 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/com.googlecode.flyway/flyway-core -->
 		<dependency>
 			<groupId>com.googlecode.flyway</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>1.5</version>
+			<version>2.3.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.3.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-jdk8</artifactId>
+			<version>1.3.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.3.0.Final</version>
+		</dependency>
+
 	</dependencies>
     <build>
         <plugins>
@@ -186,13 +204,12 @@
 			<plugin>
 				<groupId>com.googlecode.flyway</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
-				<version>1.5</version>
+				<version>2.3.1</version>
 				<configuration>
 					<user>postgres</user>
 					<password>admin</password>
 					<driver>org.postgresql.Driver</driver>
 					<url>jdbc:postgresql://localhost:5432/hospital?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;connectionCollation=utf8_general_ci&amp;characterSetResults=UTF-8</url>
-					<baseDir>db/migration</baseDir>
 				</configuration>
 			</plugin>
         </plugins>
