--- a/hospital/pom.xml
+++ b/hospital/pom.xml
@@ -184,8 +184,13 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>1.3.0.Final</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
