--- a/hospital/pom.xml
+++ b/hospital/pom.xml
@@ -107,10 +107,12 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>3.0-alpha-1</version>
+			<version>2.5</version>
+			<scope>provided</scope>
 		</dependency>
 				
 		<!-- Servlet -->
