--- a/hospitalModules/hospital/pom.xml
+++ b/hospitalModules/hospital/pom.xml
@@ -192,8 +192,15 @@
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.1.0.Final</version>
+		</dependency>
 
-    </dependencies>
+
+	</dependencies>
     <build>
         <plugins>
             <plugin>
